--- a/forms/index.html
+++ b/forms/index.html
@@ -62,7 +62,7 @@
                 <td><input type="color" name="barva" id=""></td>
             </tr>
             <tr>
-                <td colspan="2"><input class="submit" type="submit" value="Odeslat"></td>
+                <td colspan="2" style="text-align: center";><input  class="submit" type="submit" value="Odeslat"></td>
             </tr>
             
         </table>
